redactable/tests/ui/not_sensitive_display_sensitive_value_rejected.rs
use redactable::{NotSensitiveDisplay, Secret, SensitiveValue, ToRedactedOutput};

fn require_output<T: ToRedactedOutput>(_: &T) {}

fn main() {
    let sensitive = SensitiveValue::<String, Secret>::from(String::from("secret"));
    require_output(&NotSensitiveDisplay(sensitive));
}
